# gollvm

./: .gitignore  AUTHORS  CMakeLists.txt  CONTRIBUTORS  LICENSE  README  README.md  goparse-llvm.cpp  project.config
bridge/: CMakeLists.txt  go-backend.cpp  go-c.h  go-llvm-backend.h  go-llvm-bexpression.cpp  go-llvm-bexpression.h  go-llvm-bfunction.cpp  go-llvm-bfunction.h  go-llvm-bnode.cpp  go-llvm-bnode.h  go-llvm-bstatement.cpp  go-llvm-bstatement.h  go-llvm-btype.cpp  go-llvm-btype.h  go-llvm-builtins.cpp  go-llvm-builtins.h  go-llvm-bvariable.cpp  go-llvm-bvariable.h  go-llvm-cabi-oracle.cpp  go-llvm-cabi-oracle.h  go-llvm-containertypes.h  go-llvm-diagnostics.cpp  go-llvm-diagnostics.h  go-llvm-dibuildhelper.cpp  go-llvm-dibuildhelper.h  go-llvm-genblocks.cpp  go-llvm-genblocks.h  go-llvm-irbuilders.cpp  go-llvm-irbuilders.h  go-llvm-linemap.h  go-llvm-materialize.cpp  go-llvm-tree-integrity.cpp  go-llvm-tree-integrity.h  go-llvm-typemanager.cpp  go-llvm-typemanager.h  go-llvm.cpp  go-llvm.h  go-sha1.cpp  go-system.h  llvm-includes.h  (+2 more)
cmake/: AutoGenGo.cmake  CmakeUtils.cmake  ConfigSetup.cmake  GoPackage.cmake  GoProgram.cmake  GoVars.cmake
cmake/modules/: AddGollvm.cmake  AutoGenGo.cmake  ConfigSetup.cmake  GenDeps.cmake  GoPackage.cmake  GoProgram.cmake  GoVars.cmake  LibbacktraceUtils.cmake  LibffiUtils.cmake  StructConfigUtils.cmake
driver/: Action.cpp  Action.h  ArchCpusAttrs.h  Artifact.cpp  Artifact.h  CMakeLists.txt  Command.cpp  Command.h  Compilation.cpp  Compilation.h  CompileGo.cpp  CompileGo.h  Distro.cpp  Distro.h  Driver.cpp  Driver.h  GccUtils.cpp  GccUtils.h  GnuTools.cpp  GnuTools.h  GollvmConfig.h.cmake  GollvmOptions.cpp  GollvmOptions.h  GollvmOptions.td  IntegAssembler.cpp  IntegAssembler.h  LinuxToolChain.cpp  LinuxToolChain.h  ReadStdin.cpp  ReadStdin.h  Tool.cpp  Tool.h  ToolChain.cpp  ToolChain.h  capture-fcn-attributes.go  goparse-llvm.cpp  llvm-goc.cpp
driver-main/: CMakeLists.txt  llvm-goc.cpp
godumpspec/: CMakeLists.txt  godumpspec.cpp
gotools/: CMakeLists.txt  gotestprogram.sh
libgo/: CMakeLists.txt  backtrace-config.h.cmake  backtrace-supported.h.cmake  capturescript.sh  checkpackage.sh  config.h.cmake  fficonfig.h.cmake  gen-sysinfo.go.linux-amd64  mkerrnoi.sh  mklibcalls.sh  mklinknames.sh  mkruntimeinc.sh
libgo/cmake/: AutoGenGo.cmake  ConfigSetup.cmake  GenDeps.cmake  GoPackage.cmake  LibbacktraceUtils.cmake  LibffiUtils.cmake  StructConfigUtils.cmake
libgo/godumpspec/: CMakeLists.txt  godumpspec.cpp  macgen.sh
libgo/godumpspec/mparser/: CMakeLists.txt  macro-parser.cpp  macro-parser.h
libgo/godumpspec/mtokenizer/: CMakeLists.txt  macro-tokenizer.cpp  macro-tokenizer.h
libgo/runtime/: go-memops.c  go-wrappers.c
llvm-gofrontend/: CMakeLists.txt  go-backend.cpp  go-llvm-bexpression.cpp  go-llvm-bexpression.h  go-llvm-bfunction.cpp  go-llvm-bfunction.h  go-llvm-bnode.cpp  go-llvm-bnode.h  go-llvm-bstatement.cpp  go-llvm-bstatement.h  go-llvm-btype.cpp  go-llvm-btype.h  go-llvm-builtins.cpp  go-llvm-builtins.h  go-llvm-bvariable.cpp  go-llvm-bvariable.h  go-llvm-cabi-oracle.cpp  go-llvm-cabi-oracle.h  go-llvm-diagnostics.cpp  go-llvm-diagnostics.h  go-llvm-dibuildhelper.cpp  go-llvm-dibuildhelper.h  go-llvm-maptypes.h  go-llvm-materialize.cpp  go-llvm-tree-integrity.cpp  go-llvm-tree-integrity.h  go-llvm-typemanager.cpp  go-llvm-typemanager.h  go-llvm.cpp  go-llvm.h
passes/: CMakeLists.txt  GC.cpp  GoAnnotation.cpp  GoMemops.cpp  GoNilChecks.cpp  GoSafeGetg.cpp  GoStackMap.cpp  GoStackMap.h  GoStatepoints.cpp  GoStatepoints.h  GoWrappers.cpp  GollvmPasses.h  RemoveAddrSpace.cpp  Util.cpp
tools/: capture-fcn-attributes.go  gollvm-wrap.py  script_utils.py
unittests/: CMakeLists.txt  remaster-tests.go
unittests/BackendCore/: BackendArrayStruct.cpp  BackendCABIOracleTests.cpp  BackendCallTests.cpp  BackendCoreTests.cpp  BackendDebugEmit.cpp  BackendExprTests.cpp  BackendFcnTests.cpp  BackendNodeTests.cpp  BackendPointerExprTests.cpp  BackendStmtTests.cpp  BackendTreeIntegrity.cpp  BackendVarTests.cpp  CMakeLists.txt  DiffUtils.h  LinemapTests.cpp  Sha1Tests.cpp  TestUtils.cpp  TestUtils.h  TestUtilsTest.cpp
unittests/Driver/: CMakeLists.txt  DriverTests.cpp
unittests/DriverUtils/: CMakeLists.txt  DriverUtilsTests.cpp
unittests/GoDumpSpec/: CMakeLists.txt  ParserTests.cpp  TokenizerTests.cpp
unittests/Parser/: ParserTest.cpp
unittests/TestUtils/: CMakeLists.txt  DiffUtils.cpp  DiffUtils.h
